NIFI-8287 Corrected Path usage for Java 8
Signed-off-by: David Handermann <exceptionfactory@apache.org>